Sat Aug  3 06:55:29 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (value_expr_gen): now NODE_DEFN and NODE_DEFS are not void
	  value expressions.  get rid of wrong warning with -w, and make to
	  pass tests with chkbuild.  ref. [Feature #3753]

Sat Aug  3 04:23:48 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/refinements.rdoc:  Remove mention of instance_eval and
	  module_eval from scope section per:
	  http://twitter.com/shugomaeda/status/363219951336693761

Sat Aug  3 02:22:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Refactored.

Sat Aug  3 01:20:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigadd_core): Removed.
	  (bigadd): Use bary_add instead of bigadd_core.

Sat Aug  3 00:52:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Simplify power_level calculation.

Sat Aug  3 00:34:20 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): use rb_ary_new2() to create buffer
	  if rb_block_arity() > 1.

Sat Aug  3 00:12:00 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* NEWS: Add the description that IO#seek supports SEEK_DATA
	  and SEEK_HOLE.

Fri Aug  2 23:57:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm.c (m_core_define_method, m_core_define_singleton_method): now
	  the value of def-expr is the Symbol of the name of the method, not
	  nil.
	  ref. [ruby-dev:42151] [Feature #3753]

	* test/ruby/test_syntax.rb (TestSyntax#test_value_of_def): test for
	  above changes.

Fri Aug  2 23:54:11 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): performance improvement by avoiding
	  array creation if rb_block_arity() > 1.

Fri Aug  2 23:50:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Apply bigtrunc to the result of
	  bigsq.
	  (big2str_karatsuba): Fix number of leading zero characters.

Fri Aug  2 23:48:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): calculate denominator directly as powers of